# Axis-CLI

./: Axis-CLI.sln  README.md  commands.md
axis-complete/: README.md
axis-complete/.github/workflows/: accessibility.yml
axis-complete/axis-cli/: Cargo.toml
axis-complete/axis-cli/src/: checker.rs  ci.rs  fix.rs  main.rs  output.rs  renderer.rs  scanner.rs  types.rs
axis-complete/axis-cli/target_test/debug/.fingerprint/phf_shared-98b46d2649a84c8b/: lib-phf_shared.json
axis-complete/axis-cli/target_test/debug/.fingerprint/quote-0fc804c504e2659f/: output-build-script-build-script-build
axis-complete/axis-cli/target_test/debug/.fingerprint/siphasher-a002c40549897608/: lib-siphasher  lib-siphasher.json
axis-complete/axis-cli/target_test/debug/.fingerprint/siphasher-f1aae1e5ebb50ef1/: lib-siphasher  lib-siphasher.json
axis-complete/axis-cli/target_test/debug/.fingerprint/stable_deref_trait-b1ec205d69c807f2/: lib-stable_deref_trait  lib-stable_deref_trait.json
axis-complete/axis-cli/target_test/debug/.fingerprint/windows-sys-50a94969510ae2e4/: lib-windows_sys
axis-complete/axis-renderer/AxisRenderer/: AxisRenderer.csproj  Program.cs  Program.cs.bak
